plugins {
    id 'java'
}

group = 'org.javasnes'
version = '1.0.0'

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

sourceCompatibility = '1.8'
targetCompatibility = '1.8'
